# ha-evisitor

./: .env.example  .gitignore  LICENSE  README.md  hacs.json  pyproject.toml
.github/workflows/: release.yml  tests.yml
custom_components/evisitor/: __init__.py  _payload.py  archive.py  binary_sensor.py  calendar.py  config_flow.py  const.py  coordinator.py  manifest.json  sensor.py  services.py  services.yaml
custom_components/evisitor/blueprints/automation/evisitor/: auto_check_in.yaml  auto_check_out.yaml  auto_check_out_after_grace.yaml  confirm_check_in_actionable.yaml  nightly_sliding_extender.yaml
custom_components/evisitor/translations/: en.json
examples/: check_in.py
src/pyevisitor/: __init__.py  actions.py  browses.py  client.py  config.py  encoding.py  exceptions.py  guests.py  lookups.py  models.py
tests/: conftest.py  test_actions.py  test_browses.py  test_client.py  test_config.py  test_encoding.py  test_guests.py  test_lookups.py
tests/e2e/: test_live.py
tests/ha/: __init__.py  conftest.py  test_archive.py  test_blueprints.py  test_config_flow.py  test_payload.py  test_setup_and_services.py
